--- a/package.json
+++ b/package.json
@@ -30,12 +30,12 @@
     "rxjs": "^6.5.4"
   },
   "devDependencies": {
-    "@types/mongoose": "5.7.0",
     "@nestjs/cli": "^6.13.2",
     "@nestjs/schematics": "^6.8.1",
     "@nestjs/testing": "^6.10.14",
     "@types/express": "^4.17.2",
     "@types/jest": "25.1.1",
+    "@types/mongoose": "5.7.0",
     "@types/node": "^13.1.6",
     "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "^2.12.0",
@@ -44,6 +44,7 @@
     "eslint-config-prettier": "^6.7.0",
     "eslint-plugin-import": "^2.19.1",
     "jest": "^24.9.0",
+    "mongoose-auto-increment": "^5.0.1",
     "prettier": "^1.18.2",
     "supertest": "^4.0.2",
     "ts-jest": "25.1.0",
